# eta_compiler

./: .gitignore  Cargo.toml  README.md  lexed.lex  todo  todo.md
compiler/etac/: Cargo.toml
compiler/etac/src/: main.rs  tests.rs
compiler/etac_ast/: Cargo.toml
compiler/etac_ast/src/: ast.rs  ast_interface.rs  id.rs  lib.rs  node_id.rs  printer.rs  sexpr.rs  span_table.rs
compiler/etac_ast/src/ast/: interface.rs
compiler/etac_cache/: Cargo.toml
compiler/etac_cache/src/: asts.rs  lib.rs  node_spans.rs  reportable.rs  sources.rs  span.rs
compiler/etac_driver/: Cargo.toml
compiler/etac_driver/src/: compat.rs  lib.rs  resolve.rs  status.rs
compiler/etac_errors/: Cargo.toml
compiler/etac_errors/src/: dcx.rs  diagnostic.rs  drop_bomb.rs  emitter.rs  guarentee.rs  lib.rs
compiler/etac_lexer/: Cargo.toml
compiler/etac_lexer/src/: internal_error.rs  lib.rs  strings.rs
compiler/etac_lexer/tests/: lexer.rs  lib.rs
compiler/etac_parse/: Cargo.toml
compiler/etac_parse/src/: grammar.lalrpop  grammar_macros.rs  lib.rs  tests.rs
compiler/etac_parse/tests/: error_recovery.rs  lib.rs  parse.rs
compiler/etac_resolve/: Cargo.toml
compiler/etac_resolve/src/: lib.rs
compiler/etac_session/: Cargo.toml
compiler/etac_session/src/: cli.rs  lib.rs  logger.rs
compiler/etac_session/src/logger/: lex.rs  parse.rs
compiler/etac_span/: Cargo.toml
compiler/etac_span/src/: ariadne_compat.rs  lib.rs  sources.rs
compiler/etac_span/src/sources/: global_context.rs
compiler/etac_test/: Cargo.toml
compiler/etac_test/src/: lib.rs
compiler/etac_tests/: Cargo.toml
compiler/etac_tests/src/: lib.rs
compiler/etac_typecheck/: Cargo.toml
compiler/etac_typecheck/src/: collect.rs  context.rs  lib.rs  scope.rs  ty.rs  types.rs
etac_tests/: Cargo.toml
generate_tests/: Cargo.toml
generate_tests/src/: lib.rs
proc_macros/etac_ast_derive/: Cargo.toml
proc_macros/etac_ast_derive/src/: lib.rs
proc_macros/etac_derive_nodeid/: Cargo.toml
proc_macros/etac_derive_nodeid/src/: lib.rs
proc_macros/etac_derive_spanned/: Cargo.toml
proc_macros/etac_derive_spanned/src/: lib.rs
proc_macros/etac_sexpr_derive/: Cargo.toml
proc_macros/etac_sexpr_derive/src/: lib.rs
proc_macros/etac_types_derive/: Cargo.toml
proc_macros/etac_types_derive/src/: lib.rs
proc_macros/generate_tests/: Cargo.toml
proc_macros/generate_tests/src/: lib.rs
scripts/: Dockerfile  drun.sh  etac  runtests.sh
src/: ast.rs  cli.rs  context.rs  errors.rs  grammar.lalrpop  lexer.rs  logger.rs  main.rs  parser.rs  sources.rs
src/ast/: printer.rs
src/errors/: diagnostic.rs  lexer.rs  no_file_diagnostic.rs
src/parser/: lexer_logger.rs
src/sources/: span.rs
tests/: regression.rs  sexpr.rs
tests/pa2/: referr_block01.parsedsol  referr_vardecl03.parsedsol
