[package]
name = "eta_compiler"
version = "0.1.0"
authors = ["Skylar Abruzese"]
edition = "2024"

[build-dependencies]
lalrpop = "0.22.2"

[dependencies]
codespan-reporting = "0.13.1"
env_logger = "0.11.8"
lalrpop = "0.22.2"
lalrpop-util = { version = "0.21.0", features = ["lexer", "unicode"] }
log = "0.4.29"
