[workspace]
resolver = "3"
members  = ["compiler/*", "proc_macros/*"]
default-members = ["compiler/etac"]

[workspace.lints.clippy]
all = "warn"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Skylar Abruzese"]

[workspace.dependencies]
# external
logos 			= { git = "https://github.com/maciejhirsz/logos", branch = "master" }
ariadne         	= "0.6"
clap            	= { version = "4.5", features = ["derive"] }
either          	= "1"
lalrpop         	= "0.23"
lalrpop-util    	= { version = "0.21", features = ["lexer", "unicode"] }
pretty          	= "0.12"
unicode-width   	= "0.2"
tempfile 		= "3.27.0"
elsa 			= "1.11.2"
equivalent 		= "1.0.2"
smallvec 		= "1.15.2"
quote 			= "1.0.46"
paste 			= "1.0.15"
dashmap 		= "6.2.1"
crossbeam-skiplist 	= "0.1.3"
id-arena 		= "2.3.0"
rustc-ap-rustc_arena	= "727.0.0"
by_address		= "1.2.1"

# internal
etac	      		= { path = "compiler/etac"}
etac_ast      		= { path = "compiler/etac_ast" }
etac_cache    		= { path = "compiler/etac_cache" }
etac_driver   		= { path = "compiler/etac_driver" }
etac_errors   		= { path = "compiler/etac_errors" }
etac_lexer    		= { path = "compiler/etac_lexer" }
etac_parse    		= { path = "compiler/etac_parse" }
etac_session  		= { path = "compiler/etac_session" }
etac_resolve  		= { path = "compiler/etac_resolve" }

# internal macros
etac_types_derive 	= { path = "proc_macros/etac_types_derive" }
etac_ast_derive		= { path = "proc_macros/etac_ast_derive" }

# testing
generate_tests  = { path = "proc_macros/generate_tests" }
etac_test       = { path = "compiler/etac_test" }
expect-test 	= "1.5.1"
indoc 		= "2"
