[package]
name = "etac_cache"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
etac_ast.workspace           = true
elsa.workspace               = true
dashmap.workspace            = true
crossbeam-skiplist.workspace = true
id-arena.workspace 	     = true

[lints]
workspace = true
