[package]
name = "etac_lexer"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
etac_cache.workspace  = true
etac_errors.workspace = true
logos.workspace       = true

[dev-dependencies]
expect-test.workspace = true
indoc.workspace = true

[lints]
workspace = true
