[package]
name = "etac_parse"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
etac_ast.workspace     = true
etac_cache.workspace   = true
etac_errors.workspace  = true
etac_lexer.workspace   = true
either.workspace       = true
lalrpop-util.workspace = true

[dev-dependencies]
expect-test.workspace = true
indoc.workspace = true
etac_test.workspace = true

[build-dependencies]
lalrpop.workspace = true

[lints]
workspace = true
