[package]
name = "etac_typecheck"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
etac_ast.workspace 	= true
etac_errors.workspace 	= true
etac_span.workspace 	=true
equivalent.workspace 	= true
etac_types_derive.workspace = true
smallvec.workspace = true
paste.workspace = true

[lints]
workspace = true
